Fix pre tags overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -87,3 +87,7 @@ a{
 	margin-bottom: 15px;
 }
 
+pre{
+	white-space: pre-wrap;
+	line-height: 25px;
+}
